set min height on button to stop overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 ul {
@@ -34,7 +34,7 @@ button {
     border-radius: 5px;
     border-style: none;
     width: 90px;
-    height: 30px;
+    min-height: 30px;
 }
 
 .dark-background {
